syntax = "proto3";
import "google/protobuf/any.proto";

message ServerMsg {
    oneof msg {
        ServerApp app = 1;
        ServerWelcome welcome = 100;
        ServerCurrentSessionChanged currentSessionChanged = 101;
        ServerAvaliableSessionsChanged avaliableSessionsChanged = 102;
        PingPongMsg pong = 104;
    }
}

message ServerApp {
    uint32 from = 1;
    bytes data = 2;
}

message ServerWelcome {
    uint32 clientId = 1;
}

message ServerAvaliableSessionsChanged
 {
    repeated Session sessions = 2;
}

message ServerCurrentSessionChanged {
    Session session = 1;
}

message ClientMsg {
    oneof msg {
        ClientAppMsg appMsg = 1;
        ClientConnectMsg connect = 100;
        ClientJoinSessionMsg joinSession = 101;
        ClientCreateSessionMsg createSession = 102;
        ClientRefreshSessionsMsg refreshSessions = 103;
        PingPongMsg ping = 104;
    }
}
message Client {
    uint32 id = 1;
}
message ConnectedClientsMsg {
    repeated Client clients = 1;
}

message ClientConnectMsg {

}

message PingPongMsg {
    float time = 1;
}

message ClientRefreshSessionsMsg {

}


message ClientJoinSessionMsg {
    uint32 sessionId = 1;
}

message ClientCreateSessionMsg {
    string name = 1;
    string password = 2;
}



message ClientAppMsg {
    uint32 to = 1;
    bytes data = 2;
    bool loopback = 3;
}


message Session {
    uint32 id = 1;
    uint32 owner = 2;
    string name = 3;
    bool passwordProtected = 4;
    repeated uint32 clients = 5;
}
